force-app/main/default/objects/JBCXM__CTATypes__c/JBCXM__CTATypes__c.object-meta.xml
<CustomObject>
    <label>CTA Type</label>
    <nameField>
        <label>CTA Types Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CTA Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>