force-app/main/default/objects/JBCXM__CTATypes__c/fields/JBCXM__CloseMilestone__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CloseMilestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CloseMilestone</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>CloseMilestone</relationshipLabel>
    <relationshipName>CloseMilestone</relationshipName>
    <type>Lookup</type>
</CustomField>