force-app/main/default/objects/JBCXM__CTATypes__c/fields/JBCXM__CTAAssociationMetaData__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CTAAssociationMetaData__c</fullName>
    <description>Used to Store CTA Associated objects details</description>
    <label>CTA Association MetaData</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>