force-app/main/default/objects/JBCXM__CTATypes__c/fields/JBCXM__DefaultClosedStatus__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DefaultClosedStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Closed Status</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Default Closed Status</relationshipLabel>
    <relationshipName>DefaultClosedStatus</relationshipName>
    <type>Lookup</type>
</CustomField>