force-app/main/default/objects/JBCXM__CTATypes__c/fields/JBCXM__DefaultOpenStatus__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DefaultOpenStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Open Status</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Default Open Status</relationshipLabel>
    <relationshipName>DefaultOpenStatus</relationshipName>
    <type>Lookup</type>
</CustomField>