force-app/main/default/objects/JBCXM__CTATypes__c/fields/JBCXM__DefaultPriority__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DefaultPriority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Priority</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Default Priority</relationshipLabel>
    <relationshipName>DefaultPriority</relationshipName>
    <type>Lookup</type>
</CustomField>