force-app/main/default/objects/JBCXM__CTATypes__c/fields/JBCXM__DefaultReason__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DefaultReason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Reason</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Default Reason</relationshipLabel>
    <relationshipName>DefaultReason</relationshipName>
    <type>Lookup</type>
</CustomField>