force-app/main/default/objects/JBCXM__CTATypes__c/fields/JBCXM__DefaultSnoozeReason__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DefaultSnoozeReason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Snooze Reason</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Default Snooze Reason</relationshipLabel>
    <relationshipName>DefaultSnoozeReason</relationshipName>
    <type>Lookup</type>
</CustomField>