force-app/main/default/objects/JBCXM__CTATypes__c/fields/JBCXM__ForSuccessPlan__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ForSuccessPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies CTA type for success plan objective</description>
    <label>Success plan</label>
    <type>Checkbox</type>
</CustomField>