force-app/main/default/objects/JBCXM__CTATypes__c/fields/JBCXM__IsActive__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check to activate / Uncheck to deactivate.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>