force-app/main/default/objects/JBCXM__CTATypes__c/fields/JBCXM__PluralLabel__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__PluralLabel__c</fullName>
    <label>Plural label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>