force-app/main/default/objects/JBCXM__CTATypes__c/fields/JBCXM__Recurring__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recurring will be used to determine a CTA supports recurring. True and False are the possible values</description>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>