force-app/main/default/objects/JBCXM__CTATypes__c/fields/JBCXM__ReportCategory__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ReportCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Category</label>
    <referenceTo>JBCXM__GSReportCategory__c</referenceTo>
    <relationshipLabel>CTA Type</relationshipLabel>
    <relationshipName>CTATypes</relationshipName>
    <type>Lookup</type>
</CustomField>