force-app/main/default/objects/JBCXM__CTATypes__c/fields/JBCXM__SystemDefined__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SystemDefined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies prep-packed types</description>
    <label>System defined</label>
    <type>Checkbox</type>
</CustomField>