force-app/main/default/objects/JBCXM__CTATypes__c/fields/JBCXM__TaskAssociationMetaData__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TaskAssociationMetaData__c</fullName>
    <description>To Store task configuration associated meta data</description>
    <label>Task Association MetaData</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>