force-app/main/default/objects/JBCXM__CTATypes__c/fields/JBCXM__Type__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>