force-app/main/default/objects/JBCXM__CTATypes__c/listViews/JBCXM__All.listView-meta.xml
<ListView>
    <fullName>JBCXM__All</fullName>
    <columns>NAME</columns>
    <columns>JBCXM__Color__c</columns>
    <columns>JBCXM__DisplayOrder__c</columns>
    <columns>JBCXM__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>